fix url for blog category sidebar. fix comma spacing in category list with margin hack

--- a/assets/stylesheets/blog.scss
+++ b/assets/stylesheets/blog.scss
@@ -99,3 +99,7 @@
     width: 200px
   }
 }
+
+.cat-comma {
+  margin-left: -2px;
+}
